--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>AutoSave &mdash; Sublime Text Plugin</title>
   <meta name="author" content="James Zhang">
   <meta name="description" content="Automatically save files after every keystroke in Sublime Text.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' href='assets/normalize.css'>
-  <link rel='stylesheet' href='assets/style.css'>
-  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="assets/normalize.css">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <header>
