--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Auto-Save &mdash; Sublime Text Plugin</title>
-  <meta name="author" content="James Zhang">
-  <meta name="description" content="A Sublime Text plugin that automatically saves the current file after every modification.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="assets/normalize.css">
-  <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-  <header>
-    <h1>Auto-Save &mdash; Sublime Text Plugin</h1>
-    <hgroup>
-      <h2>Automatically saves the current file after every modification.</h2>
-      <h2>Install via <a href="https://sublime.wbond.net/packages/auto-save">Sublime Package Control</a>.</h2>
-    </hgroup>
-    <div class="links">
-      <a href="https://github.com/jamesfzhang/auto-save#autosave" class="button">Documentation</a>
-      <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgithub.com%2Fjamesfzhang%2Fauto-save&via=jamesfzhang&text=Auto-Save%20-%20Sublime%20Text%20Plugin%20for%20saving%20files%20after%20every%20modification" target="_blank" class="button outline mb1">Tweet about it</a>
+  <head>
+    <meta charset="utf-8">
+    <meta name="author" content="James Zhang">
+    <meta name="description" content="A Sublime Text plugin that automatically saves the current file after every modification.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>auto-save &middot; Sublime Text Plugin</title>
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/app.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="/assets/js/app.js"></script>
+  </head>
+  <body>
+    <div class="pane">
+      <div class="content">
+        <dl>
+          <dt>Name</dt>
+          <dd><a href="/">auto-save</a></dd>
+        </dl>
+        <dl>
+          <dt>Description</dt>
+          <dd>Automatically saves the current file after every modification.</dd>
+        </dl>
+        <dl>
+          <dt>Demo</dt>
+          <dd><img class="demo" src="https://github.com/jamesfzhang/auto-save/blob/master/demo.gif?raw=true"></dd>
+        </dl>
+        <dl>
+          <dt>Links</dt>
+          <dd><a href="https://sublime.wbond.net/packages/auto-save">Package Control</a>, <a href="https://github.com/jamesfzhang/auto-save#autosave" class="button">GitHub</a>, <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgithub.com%2Fjamesfzhang%2Fauto-save&via=jamesfzhang&text=Auto-Save%20-%20Sublime%20Text%20Plugin%20for%20saving%20files%20after%20every%20modification" target="_blank" class="button outline mb1">Tweet it</a></dd>
+        </dl>
+        <dl>
+          <dt>Author</dt>
+          <dd><a href="http://jzhang.io">James Zhang</a></dd>
+        </dl>
+      </div>
     </div>
-  </header>
-  <div class="demo">
-    <img src="https://github.com/jamesfzhang/auto-save/blob/master/demo.gif?raw=true">
-  </div>
-  <footer>
-    Made by <a href="https://twitter.com/jamesfzhang" target="_blank">@jamesfzhang</a>.
-  </footer>
-</body>
+  </body>
 </html>
