Remove unused class namesg

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </dl>
         <dl>
           <dt>Links</dt>
-          <dd><a href="https://sublime.wbond.net/packages/auto-save">Package Control</a>, <a href="https://github.com/jamesfzhang/auto-save#autosave" class="button">GitHub</a>, <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgithub.com%2Fjamesfzhang%2Fauto-save&via=jamesfzhang&text=Auto-Save%20-%20Sublime%20Text%20Plugin%20for%20saving%20files%20after%20every%20modification" target="_blank" class="button outline mb1">Tweet it</a></dd>
+          <dd><a href="https://sublime.wbond.net/packages/auto-save">Package Control</a>, <a href="https://github.com/jamesfzhang/auto-save#autosave">GitHub</a>, <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgithub.com%2Fjamesfzhang%2Fauto-save&via=jamesfzhang&text=Auto-Save%20-%20Sublime%20Text%20Plugin%20for%20saving%20files%20after%20every%20modification" target="_blank">Tweet it</a></dd>
         </dl>
         <dl>
           <dt>Author</dt>
