--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="content">
         <dl>
           <dt>Name</dt>
-          <dd><a href="/">auto-save</a></dd>
+          <dd><a href="/auto-save">auto-save</a></dd>
         </dl>
         <dl>
           <dt>Description</dt>
@@ -28,11 +28,11 @@
         </dl>
         <dl>
           <dt>Links</dt>
-          <dd><a href="https://sublime.wbond.net/packages/auto-save">Package Control</a>, <a href="https://github.com/jamesfzhang/auto-save#autosave">GitHub</a>, <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgithub.com%2Fjamesfzhang%2Fauto-save&via=jamesfzhang&text=Auto-Save%20-%20Sublime%20Text%20Plugin%20for%20saving%20files%20after%20every%20modification" target="_blank">Tweet it</a></dd>
+          <dd><a href="https://sublime.wbond.net/packages/auto-save">Package Control</a>, <a href="https://github.com/jamesfzhang/auto-save#auto-save">GitHub</a>, <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgithub.com%2Fjamesfzhang%2Fauto-save&via=jamesfzhang&text=Auto-Save%20-%20Sublime%20Text%20Plugin%20for%20saving%20files%20after%20every%20modification" target="_blank">Tweet it</a></dd>
         </dl>
         <dl>
           <dt>Author</dt>
-          <dd><a href="http://jzhang.io">James Zhang</a></dd>
+          <dd><a href="/">James Zhang</a></dd>
         </dl>
       </div>
     </div>
